<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <SwitchPreference
        android:defaultValue="true"
        android:key="safe_mode"
        android:icon="@drawable/ic_sfm"
        android:summary="@string/safe_mode_summary"
        android:layout="@layout/sw_p_l"
        android:title="@string/safe_mode" />
    <SwitchPreference
        android:defaultValue="true"
        android:key="sleep_mode"
        android:icon="@drawable/ic_slp"
        android:summary="@string/sleep_mode_summary"
        android:layout="@layout/sw_p_l"
        android:title="@string/sleep_mode" />
    <PreferenceCategory android:title="@string/flash_group" android:layout="@layout/gr_p_l"/>
    <ListPreference
        android:key="other_option_camera_id_list"
        android:title="@string/flash_title"
        android:summary="@string/default_item"
        android:defaultValue="-1"
        android:layout="@layout/sc_p_l"
        android:icon="@drawable/ic_fls" />
    <SwitchPreference
        android:defaultValue="false"
        android:key="invert_mode"
        android:icon="@drawable/ic_acl"
        android:summary="@string/invert_mode_summary"
        android:layout="@layout/sw_p_l"
        android:title="@string/invert_mode" />
    <PreferenceCategory android:title="@string/group_logs" android:layout="@layout/gr_p_l"/>
    <PreferenceScreen
        android:key="logs_screen"
        android:layout="@layout/sc_p_l"
        android:icon="@drawable/ic_log"
        android:title="@string/logs">
        <PreferenceCategory android:title="@string/group_logs" android:layout="@layout/gr_p_l"/>
    </PreferenceScreen>
</PreferenceScreen>