<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <SwitchPreference
        android:defaultValue="false"
        android:key="income_call"
        android:title="@string/incomecall" />
    <PreferenceCategory android:title="@string/group" />
    <EditTextPreference
        android:defaultValue="25"
        android:dependency="income_call"
        android:dialogTitle="@string/duration"
        android:inputType="number"
        android:key="income_call_in"
        android:title="@string/duration" />
    <EditTextPreference
        android:defaultValue="50"
        android:dependency="income_call"
        android:dialogTitle="@string/pause_flash"
        android:inputType="number"
        android:key="income_call_out"
        android:title="@string/pause_flash" />
    <CheckBoxPreference
        android:defaultValue="true"
        android:dependency="income_call"
        android:key="income_call_strobe"
        android:title="@string/strobe_check" />
    <EditTextPreference
        android:defaultValue="10"
        android:dependency="income_call_strobe"
        android:dialogTitle="@string/strobe_count"
        android:inputType="number"
        android:key="income_call_count"
        android:title="@string/strobe_count" />
    <EditTextPreference
        android:defaultValue="1000"
        android:dependency="income_call_strobe"
        android:dialogTitle="@string/strobe_check"
        android:inputType="number"
        android:key="income_call_wait"
        android:title="@string/strobe_check" />
    <CheckBoxPreference
        android:defaultValue="true"
        android:dependency="income_call"
        android:key="income_call_repeat"
        android:title="@string/repeat_check" />
</PreferenceScreen>
