<preference-headers xmlns:android="http://schemas.android.com/apk/res/android">
    <header
        android:fragment="com.scrat.flashblinkservice.StAct"
        android:title="@string/incomecall">
        <extra
            android:name="start"
            android:value="income_call" />
    </header>
    <header
        android:fragment="com.scrat.flashblinkservice.StAct"
        android:title="@string/misscall">
        <extra
            android:name="start"
            android:value="income_miss" />
    </header>
    <header
        android:fragment="com.scrat.flashblinkservice.StAct"
        android:title="@string/incomesms">
        <extra
            android:name="start"
            android:value="income_sms" />
    </header>
    <header
        android:fragment="com.scrat.flashblinkservice.StAct"
        android:title="@string/incomealarm">
        <extra
            android:name="start"
            android:value="income_alarm" />
    </header>
    <header
        android:fragment="com.scrat.flashblinkservice.StAct"
        android:title="@string/incomeapp">
        <extra
            android:name="start"
            android:value="income_app" />
    </header>
    <header
        android:fragment="com.scrat.flashblinkservice.StAct"
        android:title="@string/group_general">
        <extra
            android:name="start"
            android:value="other_option" />
    </header>
</preference-headers>
