<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <SwitchPreference
        android:defaultValue="false"
        android:key="income_miss"
        android:icon="@drawable/ic_phm"
        android:layout="@layout/sw_p_l"
        android:title="@string/misscall" />
    <PreferenceCategory android:title="@string/group" android:layout="@layout/gr_p_l"/>
    <EditTextPreference
        android:defaultValue="25"
        android:dependency="income_miss"
        android:dialogTitle="@string/duration"
        android:inputType="number"
        android:key="income_miss_in"
        android:layout="@layout/sc_p_l"
        android:title="@string/duration" />
    <EditTextPreference
        android:defaultValue="1000"
        android:dependency="income_miss"
        android:dialogTitle="@string/pause_flash"
        android:inputType="number"
        android:key="income_miss_out"
        android:layout="@layout/sc_p_l"
        android:title="@string/pause_flash" />
    <SwitchPreference
        android:defaultValue="false"
        android:dependency="income_miss"
        android:key="income_miss_strobe"
        android:layout="@layout/sw_p_l"
        android:title="@string/strobe_check" />
    <EditTextPreference
        android:defaultValue="10"
        android:dependency="income_miss_strobe"
        android:dialogTitle="@string/strobe_count"
        android:inputType="number"
        android:key="income_miss_count"
        android:layout="@layout/sc_p_l"
        android:title="@string/strobe_count" />
    <EditTextPreference
        android:defaultValue="1000"
        android:dependency="income_miss_strobe"
        android:dialogTitle="@string/strobe_check"
        android:inputType="number"
        android:key="income_miss_wait"
        android:layout="@layout/sc_p_l"
        android:title="@string/strobe_check" />
    <SwitchPreference
        android:defaultValue="true"
        android:dependency="income_miss"
        android:key="income_miss_repeat"
        android:layout="@layout/sw_p_l"
        android:title="@string/repeat_check" />
</PreferenceScreen>