<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <SwitchPreference
        android:defaultValue="false"
        android:icon="@drawable/ic_alr"
        android:key="income_alarm"
        android:layout="@layout/sw_p_l"
        android:title="@string/incomealarm" />
    <EditTextPreference
        android:dependency="income_alarm"
        android:dialogTitle="@string/custom_intent_caption"
        android:dialogMessage="@string/custom_intent_message"
        android:inputType="text"
        android:key="income_alarm_custom"
        android:layout="@layout/im_p_l"
        android:title="@string/custom_intent" />
    <PreferenceCategory android:title="@string/group" android:layout="@layout/gr_p_l"/>
    <EditTextPreference
        android:defaultValue="300"
        android:dependency="income_alarm"
        android:dialogTitle="@string/duration"
        android:inputType="number"
        android:key="income_alarm_in"
        android:layout="@layout/sc_p_l"
        android:title="@string/duration" />
    <EditTextPreference
        android:defaultValue="300"
        android:dependency="income_alarm"
        android:dialogTitle="@string/pause_flash"
        android:inputType="number"
        android:key="income_alarm_out"
        android:layout="@layout/sc_p_l"
        android:title="@string/pause_flash" />
    <SwitchPreference
        android:defaultValue="false"
        android:dependency="income_alarm"
        android:key="income_alarm_strobe"
        android:layout="@layout/sw_p_l"
        android:title="@string/strobe_check" />
    <EditTextPreference
        android:defaultValue="10"
        android:dependency="income_alarm_strobe"
        android:dialogTitle="@string/strobe_count"
        android:inputType="number"
        android:key="income_alarm_count"
        android:layout="@layout/sc_p_l"
        android:title="@string/strobe_count" />
    <EditTextPreference
        android:defaultValue="50"
        android:dependency="income_alarm_strobe"
        android:dialogTitle="@string/strobe_check"
        android:inputType="number"
        android:key="income_alarm_wait"
        android:layout="@layout/sc_p_l"
        android:title="@string/strobe_check" />
    <SwitchPreference
        android:defaultValue="true"
        android:dependency="income_alarm"
        android:key="income_alarm_repeat"
        android:layout="@layout/sw_p_l"
        android:title="@string/repeat_check" />
</PreferenceScreen>